# libexcept

./: .gitignore  LICENSE-MIT.md  Makefile.am  README.md  bootstrap  configure.ac
src/: Makefile.am  except.c  except.h
tests/: Makefile.am  test.c
